# Cursework23

./: CMakeLists.txt  List.hpp  README.md  Student.cpp  Student.h  Student.hpp  data.txt  key.txt  main.cpp  tolkachev.cpp  tolkachev.h  ТолкачевОтчет.docx
